tests/baselines/reference/assignmentCompatWithNumericIndexer3.errors.txt
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithNumericIndexer3.ts(14,1): error TS2322: Type '{ [x: number]: Base; }' is not assignable to type 'A'.
  Index signatures are incompatible.
    Type 'Base' is not assignable to type 'Derived'.
      Property 'bar' is missing in type 'Base'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithNumericIndexer3.ts(23,1): error TS2322: Type 'A' is not assignable to type '{ [x: number]: Derived2; }'.
  Index signatures are incompatible.
    Type 'Derived' is not assignable to type 'Derived2'.
      Property 'baz' is missing in type 'Derived'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithNumericIndexer3.ts(33,9): error TS2322: Type '{ [x: number]: Derived; }' is not assignable to type 'A<T>'.
  Index signatures are incompatible.
    Type 'Derived' is not assignable to type 'T'.


==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithNumericIndexer3.ts (3 errors) ====
    // Derived type indexer must be subtype of base type indexer
    
    interface Base { foo: string; }
    interface Derived extends Base { bar: string; }
    interface Derived2 extends Derived { baz: string; }
    
    class A {
        [x: number]: Derived;
    }
    
    var a: A;
    var b: { [x: number]: Base; };
    
    a = b; // error
    ~
!!! error TS2322: Type '{ [x: number]: Base; }' is not assignable to type 'A'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type 'Base' is not assignable to type 'Derived'.
!!! error TS2322:       Property 'bar' is missing in type 'Base'.
    b = a; // ok
    
    class B2 extends A {
        [x: number]: Derived2; // ok
    }
    
    var b2: { [x: number]: Derived2; };
    a = b2; // ok
    b2 = a; // error
    ~~
!!! error TS2322: Type 'A' is not assignable to type '{ [x: number]: Derived2; }'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type 'Derived' is not assignable to type 'Derived2'.
!!! error TS2322:       Property 'baz' is missing in type 'Derived'.
    
    module Generics {
        class A<T extends Derived> {
            [x: number]: T;
        }
    
        function foo<T extends Derived>() {
            var a: A<T>;
            var b: { [x: number]: Derived; };
            a = b; // error
            ~
!!! error TS2322: Type '{ [x: number]: Derived; }' is not assignable to type 'A<T>'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type 'Derived' is not assignable to type 'T'.
            b = a; // ok
    
            var b2: { [x: number]: T; };
            a = b2; // ok
            b2 = a; // ok
        }
    }